# ReconhecimentoFacialMLP

./: .gitignore  README.md  config.yaml  download_models.py  face_detector.py  main.py  predictor.py  pyproject.toml  real_time_recognition.py
dataset/Bernardo/: face_20250408_092217_3.pgm  face_20250408_092217_4.pgm  face_20250408_092218_10.pgm  face_20250408_092218_11.pgm  face_20250408_092218_12.pgm  face_20250408_092218_13.pgm  face_20250408_092218_14.pgm  face_20250408_092218_16.pgm  face_20250408_092218_9.pgm  face_20250408_092219_18.pgm  face_20250408_092219_21.pgm  face_20250408_110318.pgm  face_20250408_110320.pgm  face_20250408_110321.pgm  face_20250408_110322.pgm  face_20250408_110323.pgm  face_20250408_110325.pgm  face_20250408_110326.pgm  face_20250408_110327.pgm
dataset/s2/: 1.pgm
detected_faces/: face_20250408_092216_0.pgm  face_20250408_092217_1.pgm  face_20250408_092217_2.pgm  face_20250408_092217_5.pgm  face_20250408_092217_6.pgm  face_20250408_092217_7.pgm  face_20250408_092218_15.pgm  face_20250408_092218_8.pgm  face_20250408_092219_17.pgm  face_20250408_092219_19.pgm  face_20250408_092219_20.pgm
src/: __init__.py  config.py  datasets.py  evaluation.py  face_detection.py  face_recognition.py  frame_processor.py  model.py  preprocessing.py  preprocessing_dataset.py  train.py  train_model.py  training.py  utils.py  visualization.py
src/data/: preprocessing_dataset.py
src/face/: face_detection.py  face_recognition.py  preprocessing.py
src/model/: evaluation.py  model.py  train.py
src/utils/: capture_faces.py  config.py  utils.py  visualization.py
